download/archives/2.0.1/index.markdown
---
author: Gabriel Burt
comments: false
date: 2011-05-03 00:51:26+00:00
layout: page
slug: 2-0-1
title: Banshee 2.0.1
wordpress_id: 1033
---


	
  * **Release Date:** May 2, 2011

	
  * **Source Tarball:** [banshee-2.0.1.tar.bz2](http://download.banshee-project.org/banshee/stable/2.0.1/banshee-2.0.1.tar.bz2)

	
  * **Release Information:**
[NEWS](http://download.banshee-project.org/banshee/stable/2.0.1/banshee-2.0.1.news),
[sha256sum](http://download.banshee-project.org/banshee/stable/2.0.1/banshee-2.0.1.sha256sum)




[![Download Now](/theme/css/images/download-button.png)](/download)






    Banshee 2.0.1 is a stable, bug-fix-only release building on Banshee 2.0.0.







### Notable Bug Fixes (40 fixed since 2.0.0!)





    
      
  * AmazonMp3.Store: Fix signed-in detection for UK store
      
  * PodcastFeedPropertiesDialog: Fix display of feed URL (underscore)
      
  * [bgo#648941](http://bugzilla.gnome.org/show_bug.cgi?id=648941): Add .spc to whitelist
      
  * [bgo#648458](http://bugzilla.gnome.org/show_bug.cgi?id=648458): PlsPlaylistFormat: Make parsing the header case-insensitive
      
  * [bgo#647754](http://bugzilla.gnome.org/show_bug.cgi?id=647754): Add USB ids for Xperia X12
      
  * [bgo#647024](http://bugzilla.gnome.org/show_bug.cgi?id=647024): Lastfm: Fix NRE crash
      
  * [bgo#646991](http://bugzilla.gnome.org/show_bug.cgi?id=646991): AlbumListView: Fix disappearing option in Preferences
      
  * [bgo#647932](http://bugzilla.gnome.org/show_bug.cgi?id=647932): DatabaseSource: Fix NRE in SkipTrackIfRemoved
      
  * [bgo#642140](http://bugzilla.gnome.org/show_bug.cgi?id=642140): Last.fm: Close HTTP streams when finished with them
      
  * [bgo#633552](http://bugzilla.gnome.org/show_bug.cgi?id=633552): AppleDevice: Ensure m4a/mp3 are supported
      
  * [bgo#647144](http://bugzilla.gnome.org/show_bug.cgi?id=647144): StreamPositionLabel: Avoid unnecessary redraws
      
  * [bgo#647089](http://bugzilla.gnome.org/show_bug.cgi?id=647089): Daap: Bind to IPAddress.Loopback instead of Any
      
  * [bgo#647059](http://bugzilla.gnome.org/show_bug.cgi?id=647059): Fix Remote Daap crash




### Updated Translations


      


      Dutch, Galician, Greek, Hungarian, Korean, Russian, Telugu, Vietnamese
      










#### Banshee has a lot more to offer! Check out the previous major release notes...





	
  * [Read about features added in Banshee 2.0.0](/download/archives/2.0.0)

	
  * [Read about features added in Banshee 1.8.0](/download/archives/1.8.0)

	
  * [Read about features added in Banshee 1.6.0](/download/archives/1.6.0)

	
  * [Read about features added in Banshee 1.4.0](/download/archives/1.4.0)




### Dependencies





	
  * Mono 1.9.1 (.NET 2.0 Profile / gmcs)

	
  * SQlite 3.4

	
  * Gtk# 2.12

	
  * GStreamer 0.10.13

	
  * NDesk DBus (ndesk-dbus) 0.5

	
  * NDesk DBus GLib (ndesk-dbus-glib) 0.3

	
  * Mono.Addins (mono-addins) 0.3.1

	
  * TagLib# (taglib-sharp) >= 2.0.3.7

	
  * Required to build default feature stack:

	
    * libmtp >= 0.2.0

	
    * mono-zeroconf >= 0.8.0

	
    * boo >= 0.8.1

    
    * webkit-1.0 >= 1.2.2

    
    * gdata-sharp >= 1.4

    
    * glib >= 2.22, gio-sharp >= 2.22.2, gtk-sharp-beans >= 2.14.1, gudev-sharp and gkeyfile-sharp

    
    * libgpod-sharp >= 0.7.95




	
  * Run-time requirements for default feature stack:

	
    * GIO/udev

    
    * Brasero >= 0.8.1

	
    * Avahi

    
    * gst-plugins-bad (providing the bpmdetect GStreamer plugin)







### Community





#### Contributors For This Release


The following people directly contributed to the release of this version of Banshee. Without their help, there would be no release!


> 
    

      Bertrand Lorentz, Christopher James Halse Rogers, David Nielsen,
      Dustin C. Hatch, Frank Ziegler, Gabriel Burt, Michael Martin-Smucker,
      Olivier Dufour, Will Thompson

    



The following people contributed updated translations to this release.    Without them, our project's reach would be much more limited.


> 
    

      Changwoo Ryu, Fran Diéguez, Gabor Kelemen, Hajime Mizuno,
      Lê Hoàng Ph??ng, Michael Kotsarinis, Nguy?n Thái Ng?c Duy,
      Nguy?n Thái Ng?c Duy, Wouter Bolsterlee, Yuri Myasoedov, krishnababu k







#### Contributors In Past Releases




> 
    
    Aaron Bockover, Alan McGovern, Alex Bennee, Alex Kloss, Alex Launi,
    Alex Mauer, Alex Willmy, Alexander Hixon, Alexander Kojevnikov,
    Alexandros Frantzis, Alp Toker, Anders Petersson, Andrea Cimitan,
    Andreas Neustifter, Andreas Nilsson, Andrew Conkling,
    Andrés G. Aragoneses, Andy Midgette, Aran Cox, Arthur Carli,
    Arun Raghavan, Aurélien Mino, Aydemir Ula? ?ahin, Ben Maurer,
    Benjamín Valero Espinosa, Bertrand Lorentz, Bill Dawson, Bob Copeland,
    Bojan Rajkovic, Brad Taylor, Brandon Perry, Brian Lucas, Brian Nickel,
    Brian Teague, Chow Loong Jin, Chris Howie, Chris Jones, Chris Lahey,
    Chris Toshok, Chris Turchin, Christian Hergert, Christian Krause,
    Christoph Burgdorf, Christopher James Halse Rogers, Claude Paroz,
    Cody Russell, Cosmin Banu, Dan Wilson, Dan Winship, Daniel Munkton,
    Daniel Siegel, David Nielsen, David Spreen, David Stone, Diego E. Pettenò,
    Dougal Stanton, Dustin C. Hatch, Eitan Isaacson, Elena Grassi,
    Eoin Hennessy, Eric Butler, Erik Schmidt, Fabian Jost,
    Felipe Almeida Lessa, Fernando Casanova, Florent Thoumie, Frank Ziegler,
    Fredrik Hedberg, Félix Velasco, Gabriel Burt, Garrett LeSage,
    Ghislain Lacroix, Götz Waschk, Haitao Feng, Hans Petter Jansson,
    Harold Schreckengost, Iain Lane, Igor Guerrero Fonseca, Ilya Konstantinov,
    Ivan N. Zlatev, Jack Deslippe, Jakub Steiner, James Willcox,
    Jan Arne Petersen, Jason Conti, Jason Taylor, Jeff Tickle, Jeff Wheeler,
    Jensen Somers, Jeroen Budts, Jo Shields, Johannes Kuhn, John Millikin,
    Jonas Urth Olsen, Jordi Mas, Jorge Castro, Julien Moutte, Juri Pakaste,
    Ján Sokoly, Jérémie Laval, K. Vishnoo Charan Reddy, Ken Vandine,
    Kentaro KAZUHAMA, Kevin Duffus, Koichi Akabe, Konstantin Oshiyko,
    Larry Ewing, Lauri Kotilainen, Lukas Lipka, Mackenan Grassi, Marijn Ros,
    Mark Busby, Matt Enright, Matt Sturgeon, Michael Kaiser,
    Michael Martin-Smucker, Michael Monreal, Michael Monreal, Micha? Sawicz,
    Miguel de Icaza, Mike Gemünde, Mike Urbanski, Moritz Schallaböck,
    Nathan Palmer, Neil Loknath, Nicholas Doyle, Nicholas Parker,
    Nicolò Chieffo, Nils Naumann, Oben Sonne, Olivier Dufour, Oscar Forero,
    Pacho Ramos, Patrick van Staveren, Paul Cutler, Paul Lange, Pavel Antonov,
    Pepijn van de Geer, Pete Johanson, Peter de Kraker, Pratik Patel,
    Przemys?aw Grzegorczyk, Raimo Radczewski, Robin Stocker, Roderich Schupp,
    Rodney Dawes, Romain Tartière, Ruben Vermeersch, Ryan Collier,
    Samuel Gyger, Sandy Armstrong, Scott Peterson, Sebastian Dröge,
    Shaun McCance, Sjoerd Simons, Tim Fisken, Tim Yamin, Tobias Mueller,
    Todd Berman, Travis Glenn Hansen, Travis Reitter, Trey Ethridge,
    Valentin Sawadski, Will Farrington, William Friesen, William Pettersson,
    Wouter Bolsterlee, Yuuto Tokunaga, Zhou Ting






#### Reporting Bugs, Joining the Community


If you encounter any bad behavior with this release, please do not hesitate to [file bugs](/contribute/file-bugs/)!

We welcome new contributors - developers, translators, artists, writers, support gurus - to join our community.  [Join us!](/contribute)
